2003-11-08  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/sp-object.h: (SP_VERSION_*): New enum type
	(sp_object_get_version): New method come from sp-text.c

	* src/sp-object.c: (sp_object_get_version): New method,
	I'll rewrite sp-text later.

2003-11-05  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-object.h: Put generic children link here

	* src/sp-object.c (sp_object_invoke_children_update): New method
	(sp_object_invoke_children_modified): Ditto

	* src/libnr/nr-stroke.c (nr_svl_stroke_build_finish_subpath): Fail,
	if only one point, fixes crash on miniature paths

2003-11-03  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/text-context.c: (sp_text_context_root_handler): Add
	GDK_Home, GDK_End key binding

	* src/sp-text.c: (sp_text_start_of_line): New method
	(sp_text_end_of_line): New method

	* src/sp-text.h: Ditto

2003-10-31  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnrtype/nr-glyphs.h: New file

	* src/libnrtype/nr-glyphs.c: New file

	* src/libnr/nr-pathops.h: New file (do not look!)

	* src/libnr/nr-pathops.c: New file (do not look!)

	* src/libnr/nr-path.c (nr_path_setup_from_art_bpath): New method
	(nr_path_release): Ditto

	* src/libnr/nr-path.h: NRPath datatype

	* src/display/nr-arena-shape.c (nr_arena_shape_update): Added test
	for new NRPath datatype

	* src/sp-text.c (sp_string_release): UCS2 content testing
	(sp_string_read_content): Ditto
	(sp_string_calculate_dimensions): Ditto
	(sp_string_set_shape): Ditto

	* src/sp-text.h: Added preliminary UCS2 content fields

2003-10-26  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* sodipodi.prj: Add Anjuta project file
	
	* .cvsignure: Add Anjuta workspace file and backup file

2003-10-25  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/libnrtype/nr-type-gnome.h
	(nr_typeface_gnome_get_type): Fixed to work with GnomePrint

	* src/libnrtype/nr-type-gnome.c
	(nr_typeface_gnome_get_type): Ditto

	* .cvsignore: Arrengement
	
	* src/.cvsignore: Add spsvgview

2003-10-23  Ted Gould  <ted@gould.cx>
